Bug 319957. Avoid unwanted invalidates of translucent windows on Windows. patch by Dainis Jonitis, r=ere,sr=roc